Bring over recent 1.12.2 fixes